# py-pdftools

./: .gitattributes  .gitignore  BUILDING.md  NOTICE  PROGRESS.md  README.md  SPECS.md  build.gradle.kts  hatch_build.py  pyproject.toml  settings.gradle.kts
.github/workflows/: publish.yml  wheels.yml
LICENSES/: PDFBOX-3.0.8.txt
docs/: native-abi-v1.md  releasing.md  textract-normalization.md
java/: build.gradle.kts  gradle.lockfile
java/src/main/java/dev/pypdftools/error/: FontException.java  InvalidOcrDataException.java  InvalidPdfException.java  PageMismatchException.java  PdfPasswordRequiredException.java  PdfPermissionException.java  PdfProcessingException.java  PdfToolsException.java
java/src/main/java/dev/pypdftools/inspection/: PdfBoxInfo.java  PdfInfo.java  PdfInfoJsonEncoder.java  PdfInspectionOperation.java  PdfInspector.java  PdfPageInfo.java
java/src/main/java/dev/pypdftools/nativeapi/: NativeBufferPointer.java  NativeErrors.java  NativeSizePointer.java  NativeStatus.java  PdfToolsEntryPoints.java
java/src/main/java/dev/pypdftools/ocr/: DefaultOcrFont.java  JsonParser.java  OcrBounds.java  OcrLineData.java  OcrOptions.java  OcrPageData.java  OcrRequest.java  OcrRequestDecoder.java  OcrTextLayerOperation.java  OcrTextLayerTransformer.java  PageCoordinateMapper.java  TextRegion.java
java/src/main/resources/dev/pypdftools/fonts/: README.md
java/src/test/java/dev/pypdftools/inspection/: PdfInfoJsonEncoderTest.java  PdfInfoTest.java  PdfInspectorTest.java  PdfTestDocuments.java
java/src/test/java/dev/pypdftools/nativeapi/: AwtMetadataProbeTest.java  NativeErrorsTest.java
java/src/test/java/dev/pypdftools/ocr/: OcrRequestDecoderTest.java  OcrTextLayerTransformerTest.java  PageCoordinateMapperTest.java
native/include/: pdftools.h
native/smoke/: inspect_smoke.c
src/py_pdftools/: __init__.py  _api.py  _exceptions.py  _ffi.py  _models.py  _protocol.py  _runtime.py
tests/: test_api.py  test_exceptions.py  test_ffi.py  test_models.py  test_native_e2e.py  test_protocol.py  test_release_artifacts.py  test_runtime.py
tools/: check_release_artifacts.py  installed_wheel_smoke.py
